@@ -1,6 +1,7 @@
 == 2.6.12 ==
 Release date: April 13, 2022
 * Enhancement: Team Member - Added: Margin option for image
+* Enhancement: Advanced Accordion - Added border radius option for title
 
 == 2.6.11 ==
 Release date: March 23, 2022
